fix: alignment and sort order of buttons

--- a/resources/sass/components/_content-editor.scss
+++ b/resources/sass/components/_content-editor.scss
@@ -11,13 +11,9 @@
 
   &__buttons {
     .button {
-      margin: 0 0 10px;
+      margin: 0 10px 10px 0;
       position: relative;
       padding: 0;
-
-      & + .button {
-        margin-left: 10px;
-      }
 
       &__text {
         display: inline-block;
@@ -55,6 +51,7 @@
     font-size: $systemFontSize - 4px;
     width: 300px;
     text-align: left;
+    z-index: 20;
   }
 
   &__item {
